api: time ranges, pass user_epr_uuid instead user_id.
